# manolo_bot

./: .dockerignore  .gitignore  .readthedocs.yaml  DOCKER.md  Dockerfile  LICENSE  README.MD  README.md  config.py  docker-compose.yml  env.example  github_issue.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  character_protection.md  feature_prevent_character_alteration.md
.github/workflows/: publish.yml  test-lint-check.yml
ai/: config.py  llmagent.py  llmbot.py  mcp_manager.py  promptguardian.py  tools.py
confighandler/: __init__.py  config_handler.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage_app.rst  usage_library.rst
manolo_bot/: __init__.py  config.py  main.py
manolo_bot/ai/: config.py  document_loaders.py  llmagent.py  llmbot.py  mcp_manager.py  tools.py
manolo_bot/storage/: base.py  memory_storage.py  redis_storage.py
manolo_bot/storage/documents/: base.py  file.py  file_storage.py  redis_storage.py  utils.py
manolo_bot/storage/messages/: memory.py  redis_storage.py
manolo_bot/telegram/: utils.py
storage/: memory_storage.py  redis_storage.py
telegram/: async_utils.py  utils.py
tests/: test_config.py
tests/ai_tests/: test_custom_tools.py  test_llmagent.py  test_llmbot.py  test_loaders.py  test_mcp_manager.py  test_tools.py  test_youtube_transcript.py
tests/confighandler_tests/: test_config_handler.py
tests/storage_tests/documents/: test_file.py
tests/telegram_tests/: test_utils.py
