[project]
name = "manolo-bot"
version = "0.1.0"
description = "Telegram Chat Bot using LLM"
authors = [{ name = "Carlos Cesar Caballero Díaz", email = "tbd@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "aiogram>=3.17.0",
    "beautifulsoup4>=4.13.3",
    "ddgs>=9.6.0",
    "envmodel>=0.2",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.52",
    "langchain-google-genai>=2.0.10",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.5.4",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "telegramify-markdown[mermaid]>=0.5.1",
    "transformers>=4.53.0",
    "youtube-transcript-api>=1.1.1",
]

[tool.uv]
dev-dependencies = ["pre-commit>=4.1.0", "pytest-asyncio>=0.24.0", "ruff>=0.11.0"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
