[project]
name = "manolo-bot"
version = "0.1.0"
description = "AI-powered Telegram Chat Bot and Library using LLMs"
authors = [{ name = "Carlos Cesar Caballero Díaz", email = "ccesarcaball.cc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "aiogram>=3.17.0",
    "beautifulsoup4>=4.13.3",
    "ddgs>=9.6.0",
    "envmodel>=0.2",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.52",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.5.4",
    "mcp>=1.3.1",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "telegramify-markdown[mermaid]>=0.5.1",
    "transformers>=4.53.0",
    "youtube-transcript-api>=1.1.1",
    "langchain-tavily>=0.2.17",
    "html2text>=2025.4.15",
]

[project.scripts]
manolo-bot = "manolo_bot.main:main_entry"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["manolo_bot*"]

[project.optional-dependencies]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "myst-parser>=5.1.0",
    "sphinx-autodoc-typehints>=3.10.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "myst-parser>=5.1.0",
    "sphinx-autodoc-typehints>=3.10.3",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
